# gazebo_objects

./: CMakeLists.txt  README.md  package.xml
gazebo_objects/: CMakeLists.txt  package.xml
gazebo_objects/include/gazebo_objects/: CylinderPlugin.hpp
gazebo_objects/scripts/: cylinder_spawner.py
gazebo_objects/src/: CylinderPlugin.cpp
gazebo_objects/worlds/: one_cup.world  one_floating_cup.world
include/gazebo_object/: GazeboPlugin.hpp
launch/: launch.launch  object_spawner.launch
models/object/: model.config  object.sdf
msg/: ObjectStateMsg.msg
scripts/: object_spawner.py  object_spawner_old.py
src/: GazeboPlugin.cpp
