<?xml version="1.0"?>
<package format="2">
    <name>gazebo_objects</name>
    <version>1.0.0</version>
    <description>The gazebo_objects package</description>

    <maintainer email="TODO@email.com">TODO</maintainer>

    <!--TODO-->
    <license>TODO</license>

    <depend>gazebo_ros</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning_interface</depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>

    <exec_depend>roscpp</exec_depend>

    <export>

    </export>
</package>
